syntax="proto3";

package user;

option go_package="src/rpc/user";

service UserService {
    rpc Register(RegisterReq) returns (RegisterResp) {}
    rpc Login(LoginReq) returns (LoginResp) {}
    rpc GetUserExistInformation(UserExistReq) returns (UserExistResp) {}
}
// RegisterReq 用户注册请求
message RegisterReq {
    string email = 1;
    string password = 2;
    string confirm_password = 3;
}
// RegisterResp 用户注册响应
message RegisterResp {
    int32 status_code = 1; // 状态码，0-成功，其他值-失败
    string status_msg = 2; // 返回状态描述
    uint32 user_id = 3;
    string token = 4; // 用户鉴权token
}
// LoginReq 用户登录请求
message LoginReq {
    string email= 1;
    string password = 2;
}
// LoginResp 用户登录响应
message LoginResp {
    int32 status_code = 1; // 状态码，0-成功，其他值-失败
    string status_msg = 2; // 返回状态描述
    uint32 user_id = 3;
    string token = 4; // 用户鉴权token
}
// UserExistRequest 用户是否存在请求
message UserExistReq {
    string email = 1; // 用户id
}
// UserExistResp 用户是否存在响应
message UserExistResp {
    int32 status_code = 1; // 状态码，0-成功，其他值-失败
    string status_msg = 2; // 返回状态描述
    bool existed = 3;
}

// $protoc --go_out=. .\src\idl\user.proto
// $protoc --go-grpc_out=. .\src\idl\user.proto